Revert breaking change

--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "is-global-object": "^1.0.0",
     "is-nil": "^1.0.1",
     "is-object": "^1.0.2",
+    "lodash.set": "^4.3.2",
     "ofn": "^1.0.0",
     "plainify": "^1.0.0",
-    "set-value": "^4.1.0",
     "wfn": "^1.0.0"
   },
   "devDependencies": {
